[gd_scene load_steps=5 format=3 uid="uid://b81buv7fvr40m"]

[ext_resource type="Script" uid="uid://t7wwipqjn52m" path="res://scripts/game_main.gd" id="1_57ec7"]
[ext_resource type="PackedScene" uid="uid://dhxaeqe0wna00" path="res://scenes/multiplayer_manager.tscn" id="2_57ec7"]
[ext_resource type="PackedScene" uid="uid://ckjyuvcx33v46" path="res://scenes/text_chat_ui.tscn" id="3_4qd86"]
[ext_resource type="PackedScene" uid="uid://gqo7n3lmq61v" path="res://scenes/lobby_ui.tscn" id="4_cbeu7"]

[node name="GameMain" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_57ec7")

[node name="MultiplayerManager" parent="." node_paths=PackedStringArray("game_main") instance=ExtResource("2_57ec7")]
unique_name_in_owner = true
game_main = NodePath("..")

[node name="TextChatUI" parent="." instance=ExtResource("3_4qd86")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="LobbyUI" parent="." instance=ExtResource("4_cbeu7")]
unique_name_in_owner = true
layout_mode = 2
